--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "taskmaster-app",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+ "scripts": {
+  "dev": "next dev",
+  "build": "prisma generate && next build",
+  "start": "next start",
+  "lint": "next lint",
+  "postinstall": "prisma generate"
+},
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@prisma/client": "^5.10.0",
